--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -13,8 +13,7 @@
     "from torchvision import datasets, transforms\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import sklearn.metrics as metrics\n",
-    "import matplotlib.pyplot as plt"
+    "import sklearn.metrics as metrics"
    ]
   },
   {
@@ -162,7 +161,7 @@
    "source": [
     "MNIST_net = CNN(28, 1, 10).to(device)\n",
     "optimizer = optim.Adam(MNIST_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
-    "for batch in range(EPOCHS):\n",
+    "for epoch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        MNIST_net.zero_grad()\n",
@@ -170,7 +169,7 @@
     "        loss = CRITERION(output, y.to(device))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    print(loss)"
+    "    print(f\"Epoch {epoch + 1} Loss: {loss.item()}\")"
    ]
   },
   {
@@ -205,7 +204,6 @@
     "print(\"Validation F1 Score:\", metrics.f1_score(true, output, average=\"macro\"))\n",
     "true = np.eye(10)[true]\n",
     "output = np.eye(10)[output]\n",
-    "print(true.shape, output.shape)\n",
     "print(\"Validation AUC Score:\", metrics.roc_auc_score(true, output, multi_class=\"ovo\", average=\"macro\"))\n",
     "            "
    ]
@@ -303,7 +301,7 @@
    "source": [
     "CIFAR10_net = CNN(32, 3, 10).to(device)\n",
     "optimizer = optim.Adam(CIFAR10_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
-    "for batch in range(EPOCHS):\n",
+    "for epoch in range(EPOCHS):\n",
     "    for data in tqdm(train_set):\n",
     "        X, y = data\n",
     "        CIFAR10_net.zero_grad()\n",
@@ -311,7 +309,7 @@
     "        loss = CRITERION(output, y.to(device))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    print(loss)"
+    "    print(f\"Epoch {epoch + 1} Loss: {loss.item()}\")"
    ]
   },
   {
@@ -396,7 +394,7 @@
     "validation_X = X[training_set_size:training_set_size + validation_set_size]\n",
     "validation_y = y[training_set_size:training_set_size + validation_set_size]\n",
     "test_X = X[training_set_size + validation_set_size:]\n",
-    "test_y = y[training_set_size + validation_set_size:]\n"
+    "test_y = y[training_set_size + validation_set_size:]"
    ]
   },
   {
@@ -459,7 +457,7 @@
    "source": [
     "Iyer_net = CNN(12, 1, 12).to(device)\n",
     "optimizer = optim.Adam(Iyer_net.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
-    "for batch in range(EPOCHS):\n",
+    "for epoch in range(EPOCHS):\n",
     "    for i in tqdm(range(0, training_set_size, BATCH_SIZE)):\n",
     "        batch_X = train_X[i:i+BATCH_SIZE]\n",
     "        batch_y = train_y[i:i + BATCH_SIZE]\n",
@@ -469,8 +467,8 @@
     "        loss = CRITERION(output, batch_y.to(device))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    print(loss)\n",
-    "    "
+    "    print(f\"Epoch {epoch + 1} Loss: {loss.item()}\")\n",
+    "        "
    ]
   },
   {
@@ -524,18 +522,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   },
   "orig_nbformat": 4
  },
